--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://IamAnkitaNandanwar.github.io/TextUtils-react",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
